<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/connection_header">

        <EditTextPreference
            app:defaultValue="@string/led_address"
            app:key="signature"
            app:title="@string/led_address_header"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="@string/led_port"
            app:key="signature"
            app:title="@string/led_port_header"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/color_header"/>

</PreferenceScreen>