<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_button"
    android:orientation="vertical">

    <!-- Second row: 4 equal buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/link_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_disconnect"
            android:scaleType="centerInside"
            android:src="@drawable/icn_unlinked" />

        <ImageButton
            android:id="@+id/toggle_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_toggle"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/icn_off" />

        <ImageButton
            android:id="@+id/incr_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/desc_incr"
            android:scaleType="centerInside"
            android:src="@drawable/icn_brighten" />

        <ImageButton
            android:id="@+id/decr_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/desc_decr"
            android:scaleType="centerInside"
            android:src="@drawable/icn_darken" />

    </LinearLayout>
</LinearLayout>